--- a/doom/config.org
+++ b/doom/config.org
@@ -61,6 +61,7 @@
 (add-hook! 'java-mode #'lsp)
 (add-hook! 'lsp-mode-hook #'lsp-lens-mode)
 (add-hook! 'java-mode-hook #'lsp-java-boot-lens-mode)
+(add-hook! 'java-mode-hook #'lsp)
 #+end_src
 
 **** Debugging
